Tried to fix the overflow problem

--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,11 @@
     box-sizing: border-box;
     font-family: 'Rubik', sans-serif;
 }
-body {
-    width: 100vw;
+html, body {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
     overflow-x: hidden;
 }
 .burger div {
@@ -536,6 +539,10 @@ div.footer h6 {
         padding: 0px;
         margin: 0px;
         overflow-x: hidden;
+    }
+    a {
+        text-decoration: none;
+        color: rgb(177, 174, 174);
     }
     div.hero-content-heading
     h3 {
